--- a/Frontend/src/app/shaders/header/header.component.html
+++ b/Frontend/src/app/shaders/header/header.component.html
@@ -9,37 +9,11 @@
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              PC'S
+              Reservaciones
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/list-pc">Listar PC's</a></li>
-              <li><a class="dropdown-item" href="/create-pc">Crear PC</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Perisfericos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/list-peripherals">Listar Perisfericos</a></li>
-              <li><a class="dropdown-item" href="/create-peripherals">Crear Perisferico</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Usuarios
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/list-users">Listar Usuarios</a></li>
-              <li><a class="dropdown-item" href="/create-user">Crear Usuario</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Casos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/list-casos">Listar Casos</a></li>
+              <li><a class="dropdown-item" href="/listar-reservacion">Listar Reservaciones</a></li>
+              <li><a class="dropdown-item" href="/crear-reservacion">Crear Reservacion</a></li>
             </ul>
           </li>
         </ul>
