--- a/Frontend/src/app/components/reservaciones/listar-reservaciones/listar-reservaciones.component.html
+++ b/Frontend/src/app/components/reservaciones/listar-reservaciones/listar-reservaciones.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body text-center">
                     <span class="titulo">LISTADO DE RESERVACIONES</span>
-                    <button class="btn btn-success float-end" routerLink="/create-pc">Nuevo</button>
+                    <button class="btn btn-success float-end" routerLink="/crear-reservacion">Nueva</button>
                     <table *ngIf="listaReservaciones.length >0" class="table table-striped mt-3">
                         <thead>
                           <tr>
